manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: ksrebuildsimple
spec:
    type: LoadBalancer
    ports:
    - port: 80 
    selector:
        app: ksrebuildsimple
